Switch the way the component bar is updated from a push to a notification system to work with the cached compose window b=177887 r=Mnyromyr sr=bienvenu a=mscott